--- a/style.css
+++ b/style.css
@@ -1,126 +1,215 @@
-body {
-    margin: 0;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Roboto', Arial;
-    text-align: center;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
-    color: #E5E7EB;
-    background-color: #1F2937;
-    padding: 12px 100px;
-}
-
-.logo img {
-    width: 84px;
-    height: 84px;
-    border-radius: 50px;
-}
-.navbar ul {
-    display: flex;
+* {
     margin: 0;
     padding: 0;
-    gap: 1rem;
-    list-style-type: none;
-}
-
-.hero {
-    display: flex;
-    justify-content: center;
-    background-color: #1F2937;
-    text-align: left;
-    padding: 80px 100px;
-}
-
-.hero .left {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 400px;
-    margin-right: 50px;
-}
-
-.hero h1 {
-    color: #F9FAF8;
-    font-size: 48px;
-    font-weight: 900;
-    margin-bottom: 0;
-}
-
-.hero p {
-    color: #E5E7EB;
-    font-size: 18px;
-    margin: 12px 0px;
-}
-
-.hero img {
-    width: 500px;
-    height: 350px;
-    border-radius: 8px;
-}
-
-.content {
-    padding: 20px 100px;
-}
-
-.content h2 {
-    margin-bottom: 40px;
-    color:#1F2937;
-    font-size: 36px;
-    font-weight: 900;
-}
-
-.cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-}
-
-.cards p {
-    text-align: center;
-    flex-wrap: wrap;
-    width: 200px;
-    margin-right: 0;
-    font-size: 18px;
-    color: #1F2937;
-}
-
-.content img {
-    width: 200px;
-    height: 200px;
-    border-radius: 10%;
-    border: 4px solid blue;
-}
-
-.quote {
-    background-color: #E5E7EB;
-    color:#1F2937;
-    padding: 80px 100px;
-    
-}
-
-.quote h2 {
-    font-size: 36px;
-    font-style: italic;
-    text-align: left;
-    font-weight: normal;
-}
-
-.quote p {
-    text-align: right;
-    font-size: 24px;
-    font-weight: bold
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    background-color: #1f2937;
+    width: 100%;
+    padding: 12px 0px;
+}
+
+.logo {
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    margin-left: 24px;
+    border: 4px solid lightblue
+}
+
+.nav-links {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-right: 24px;
+    margin-left: auto;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    background-size: cover;
+}
+
+.media-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 128px 72px 72px;
+    padding: 32px;
+    gap: 32px;
+    max-width: 1000px;
+    flex-wrap: wrap;
+}
+
+.text-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 400px;
+    flex: 1 1 auto;
+    gap: 14px;
+}
+
+.text-box h1 {
+    font-family: 'Roboto' sans-serif;
+    font-size: 46px;
+    color: white;
+    font-weight: 900;
+}
+
+.text-box p {
+    font-family: 'Roboto' sans-serif;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.button {
+    width: 110px;
+    background-color: #3882f6;
+    color: white;
+    padding: 4px 24px;
+    border-radius: 10px;
+}
+
+.header-image {
+    object-fit: cover;
+    max-width: 400px;
+    flex: 1 1 auto;
+    border-radius: 12px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    padding: 72px 72px;
+}
+
+.cards {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 24px;
+
+}
+
+.content h2 {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 36px;
+    font-weight: 600;
+    padding: 0px 0px 50px 0px;
+}
+
+.planet-card {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    gap: 8px;
+}
+
+.planet-image {
+    display: flex;
+    object-fit: cover;
+    max-width: 200px;
+    height: 200px;
+    border: 4px solid #3882f6;
+    border-radius: 12px;
+}
+
+.planet-card p {
+    display: flex;
+    flex-wrap: wrap;
+    align-self: center;
+    max-width: 190px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: black;
+}
+
+.quote {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    padding: 72px 72px;
+    background-color: #E5e7eb;
+    font-family: 'Roboto', sans-serif;
+    color: #1f2937;
+}
+
+.quote h2 {
+    font-weight: normal;
+    font-style: italic;
+    flex-wrap: wrap;
+    font-size: 36px;
+    max-width: 1000px;
+}
+
+.quote p {
+    font-size: 18px;
+    font-weight: 600;
+    padding-left: 40%;
+}
+
+.action {
+    display: flex;
+    justify-content: center;
+    padding: 72px 72px;
+}
+
+.action-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882f6;
+    border-radius: 12px;
+    gap: 40px;
+    padding: 24px 48px;
+}
+
+.action-words {
+    display: flex;
+    flex-flow: column wrap;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 18px;
+}
+
+.action-words h3{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.action-box .button {
+    align-self: center;
+    border: 1px solid white
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #E5E7EB;
+    background-color: #1f2937;
+    padding: 24px;
 }
